# RcppPlanc

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CRAN-SUBMISSION  DESCRIPTION  LICENSE-UT.md  NAMESPACE  NEWS.md  README.md  RcppPlanc.Rproj  _pkgdown.yml  cleanup  cleanup.ucrt  configure  configure.ac  configure.ucrt  cran-comments.md
.github/workflows/: rcmdcheck_mini.yaml  rhub.yaml
R/: INMF.R  RcppExports.R  RcppPlanc-package.R  conversion.R  data.R  utils.R  zzz.R
cmake/: FindAutotools.cmake  FindHWLOC.cmake  FindMKL.cmake  FindR.cmake  FindRModule.cmake
docs/: 404.html  LICENSE.html  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/news/: index.html
docs/reference/: H5Mat.html  H5SpMat.html  bppnnls.html  index.html  inmf.html  nmf.html  onlineINMF.html  print.H5Mat.html  print.H5SpMat.html  symNMF.html  uinmf.html
inst/: COPYRIGHTS
inst/include/: RcppPlanc.h
man/: H5Mat.Rd  H5SpMat.Rd  RcppPlanc-package.Rd  aoadmmnmf.Rd  bppinmf.Rd  bppinmf_dense.Rd  bppnmf.Rd  bppnnls.Rd  dim-H5SpMat.Rd  format.H5Mat.Rd  format.H5SpMat.Rd  gnsymnmf.Rd  halsnmf.Rd  inmf.Rd  munmf.Rd  nmf.Rd  onlineINMF.Rd  print.H5Mat.Rd  print.H5SpMat.Rd  rcppplanc_aoadmmnmf.Rd  rcppplanc_bppnmf.Rd  rcppplanc_bppnnls.Rd  rcppplanc_gnsymnmf.Rd  rcppplanc_halsnmf.Rd  rcppplanc_munmf.Rd  rcppplanc_nmf.Rd  symNMF.Rd  uinmf.Rd
src/: .gitignore  Makevars  Makevars.in  Makevars.ucrt.in  Makevars.win  RcppExports.cpp  conversion.cpp  rcppplanc_nmf.cpp  rcppplanc_nnls.cpp
src/common/: config.h  data.hpp  detect_blas.c  detect_blas.h  hw_detect.c  hw_detect.cpp  hw_detect.h  inmf.hpp  nmf.hpp  parsecommandline.h  parsecommandline.hpp  utils.h  utils.hpp
src/nmf/: aoadmm.hpp  bppinmf.hpp  bppnmf.hpp  gnsym.hpp  hals.hpp  mu.hpp  onlineinmf.hpp  uinmf.hpp
src/nnls/: SortBooleanMatrix.hpp  bppnnls.hpp  nnls.hpp
tests/testthat/: helper-nmf.R  test_inmf.R  test_nmf.R
tools/: CMakeLists.txt
tools/WindowsOverrides/hdf5/: hdf5-config-version.cmake  hdf5-config.cmake  hdf5-targets-release.cmake  hdf5-targets.cmake
tools/WindowsOverrides/openblas/: OpenBLASConfig.cmake
tools/cmake/: FindHWLOC.cmake  FindMKL.cmake  FindR.cmake  PatchFile.cmake  TestOpenBlasThreading.cmake  test_openblas_threading.c
tools/cmakeData/: patch_hwloc.txt  remove_assert_hwloc.txt
tools/m4/: ax_blas.m4  ax_check_compile_flag.m4  ax_lib_hdf5.m4
tools/patch/: newline_h5.patch  remove_assert_highfive.patch
tools/patch/hwloc/: bitmap.c.patch  components.c.patch  cpukinds.c.patch  diff.c.patch  distances.c.patch  memattrs.c.patch  pci-common.c.patch  shmem.c.patch  topology-aix.c.patch  topology-bgq.c.patch  topology-cuda.c.patch  topology-darwin.c.patch  topology-fake.c.patch  topology-freebsd.c.patch  topology-gl.c.patch  topology-hpux.c.patch  topology-levelzero.c.patch  topology-linux.c.patch  topology-netbsd.c.patch  topology-noos.c.patch  topology-nvml.c.patch  topology-opencl.c.patch  topology-pci.c.patch  topology-rsmi.c.patch  topology-solaris.c.patch  topology-synthetic.c.patch  topology-windows.c.patch  topology-x86.c.patch  topology-xml-libxml.c.patch  topology-xml-nolibxml.c.patch  topology-xml.c.patch  topology.c.patch  traversal.c.patch
tools/patch/include/hwloc/: bitmap.h.patch  cuda.h.patch  cudart.h.patch  glibc-sched.h.patch  helper.h.patch  levelzero.h.patch  nvml.h.patch  opencl.h.patch  openfabrics-verbs.h.patch  plugins.h.patch  rsmi.h.patch
tools/patches/: 00_remove_stdio.patch  01_remove_sprintf.patch  02_adjust_windows_types.patch  03_remove_abort.patch  series
vignettes/: RcppPlanc.Rmd
